# pastry-in-python_vue

./: README.md
admin/: main.py  pyproject.toml
admin/src/web/: __init__.py
admin/src/web/templates/: home.html  layout.html
admin/static/css/: style.css
admin/static/js/: script.js
admin/tests/: test_home.py
