[project]
name = "admin"
version = "0.1.0"
description = ""
authors = [
    {name = "Ernesto",email = "ernesto-cafre@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "admin", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
